# basic-django

./: db.sqlite3  pyproject.toml
basic_django/: settings.py  urls.py
basic_djangos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
basic_djangos/migrations/: 0001_initial.py  0002_entry.py
basic_djangos/templates/basic_djangos/: base.html  index.html  new_topic.html  topic.html  topics.html
